introduce lastCheckedAt field for polling updates and cleanUp
